fix overflow

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -220,8 +220,11 @@
 
 // Mobile
 @media (max-width: 513px) {
+    section {
+        overflow-x: hidden;
+    }
+
     #home {
-        overflow: hidden;
         .left-header {
             img {
                 width: 70%;
@@ -236,8 +239,8 @@
 
             .name {
                 padding-bottom: 0.5rem;
-                font-size: 2.3rem;
-                line-height: 2.7rem;
+                font-size: 2.1rem;
+                line-height: 2.3rem;
                 letter-spacing: 0;
             }
 
@@ -330,6 +333,8 @@
     .hidden-menu.controls {
         display: none;
     }
+
+
 }
 
 
